@@ -200,14 +200,14 @@ class TestRepositoryContract(ResourcedTestCase):
         self.assertEqual(1, len(analyzed.failures))
         self.assertEqual('failing', analyzed.failures[0][0].id())
 
-    def test_get_failing_two_runs(self):
-        # failures from two runs add to existing failures, and successes remove
-        # from them.
+    def test_get_failing_complete_runs_delete_missing_failures(self):
+        # failures from complete runs replace all failures.
         repo = self.repo_impl.initialise(self.sample_url)
         result = repo.get_inserter()
         result.startTestRun()
         make_test('passing', True).run(result)
         make_test('failing', False).run(result)
+        make_test('missing', False).run(result)
         result.stopTestRun()
         result = repo.get_inserter()
         result.startTestRun()
@@ -218,6 +218,27 @@ class TestRepositoryContract(ResourcedTestCase):
         self.assertEqual(1, analyzed.testsRun)
         self.assertEqual(1, len(analyzed.failures))
         self.assertEqual('passing', analyzed.failures[0][0].id())
+
+    def test_get_failing_partial_runs_preserve_missing_failures(self):
+        # failures from two runs add to existing failures, and successes remove
+        # from them.
+        repo = self.repo_impl.initialise(self.sample_url)
+        result = repo.get_inserter()
+        result.startTestRun()
+        make_test('passing', True).run(result)
+        make_test('failing', False).run(result)
+        make_test('missing', False).run(result)
+        result.stopTestRun()
+        result = repo.get_inserter(partial=True)
+        result.startTestRun()
+        make_test('passing', False).run(result)
+        make_test('failing', True).run(result)
+        result.stopTestRun()
+        analyzed = self.get_failing(repo)
+        self.assertEqual(2, analyzed.testsRun)
+        self.assertEqual(2, len(analyzed.failures))
+        self.assertEqual(set(['passing', 'missing']),
+            set([test[0].id() for test in analyzed.failures]))
 
     def test_get_test_run(self):
         repo = self.repo_impl.initialise(self.sample_url)
